Update coding standard

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 
 /behat.yml
 /phpspec.yml
+/phpstan.neon
+/psalm.xml
+/phpunit.xml
 
 /docker-compose.override.yaml
 /docker-compose.override.yml
