--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "sylius/sylius": "^1.12@dev"
     },
     "require-dev": {
+        "alphpaca/coding-standard": "^1.0",
         "behat/behat": "^3.7",
         "behat/mink-selenium2-driver": "^1.4",
         "dmore/behat-chrome-extension": "^1.3",
@@ -38,19 +39,14 @@
         "friends-of-behat/variadic-extension": "^1.3",
         "lchrusciel/api-test-case": "^5.0",
         "phpspec/phpspec": "^7.0",
-        "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "1.5.4",
-        "phpstan/phpstan-doctrine": "1.3.2",
-        "phpstan/phpstan-webmozart-assert": "^1.1",
         "phpunit/phpunit": "^8.5",
-        "stripe/stripe-php": "^6.43",
-        "sylius-labs/coding-standard": "^4.0",
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0",
         "symfony/browser-kit": "^5.4",
         "symfony/debug-bundle": "^5.4",
+        "symfony/dotenv": "^5.4",
         "symfony/flex": "^2.1",
         "symfony/intl": "^5.4",
-        "symfony/web-profiler-bundle": "^5.4",
-        "polishsymfonycommunity/symfony-mocker-container": "^1.0"
+        "symfony/web-profiler-bundle": "^5.4"
     },
     "config": {
         "preferred-install": {
@@ -61,7 +57,8 @@
             "symfony/flex": true,
             "dealerdirect/phpcodesniffer-composer-installer": false,
             "phpstan/extension-installer": false,
-            "symfony/thanks": false
+            "symfony/thanks": false,
+            "composer/package-versions-deprecated": false
         }
     },
     "extra": {
