--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -4,9 +4,22 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="https://getpsalm.org/schema/config"
         xsi:schemaLocation="https://getpsalm.org/schema/config vendor/vimeo/psalm/config.xsd"
-        xmlns:xi="http://www.w3.org/2001/XInclude"
 >
-    <xi:include href="vendor/alphpaca/coding-standard/psalm_files.xml"/>
-    <xi:include href="vendor/alphpaca/coding-standard/psalm_file_extensions.xml"/>
-    <xi:include href="vendor/alphpaca/coding-standard/psalm_plugins.xml"/>
+    <projectFiles>
+        <directory name="src/SyliusSkeletonPlugin/src"/>
+        <ignoreFiles>
+            <directory name="vendor"/>
+        </ignoreFiles>
+    </projectFiles>
+    <fileExtensions>
+        <extension name=".php"/>
+        <extension name=".twig" checker="./vendor/psalm/plugin-symfony/src/Twig/TemplateFileAnalyzer.php"/>
+    </fileExtensions>
+    <plugins>
+        <pluginClass class="Psalm\SymfonyPsalmPlugin\Plugin">
+            <containerXml>var/cache/dev/App_KernelDevDebugContainer.xml</containerXml>
+        </pluginClass>
+        <pluginClass class="Weirdan\DoctrinePsalmPlugin\Plugin"/>
+        <pluginClass class="Psalm\PhpUnitPlugin\Plugin"/>
+    </plugins>
 </psalm>
