Change default Sylius version

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "php": "^8.0",
-        "sylius/sylius": "^1.12@dev"
+        "sylius/sylius": "~1.11.7"
     },
     "require-dev": {
         "alphpaca/coding-standard": "^1.0",
