--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,6 +3,9 @@ name: Build
 on:
     pull_request: ~
     workflow_dispatch: ~
+    push:
+        branches:
+            - main
     release:
         types: [created]
 
