--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,10 +10,10 @@ on:
         types: [created]
 
 jobs:
-    tests:
+    static-checks:
         runs-on: ubuntu-20.04
 
-        name: "Sylius ${{ matrix.sylius }}, PHP ${{ matrix.php }}, Symfony ${{ matrix.symfony }}, MySQL ${{ matrix.mysql }}"
+        name: "Static checks (${{ matrix.sylius }}, PHP ${{ matrix.php }}, Symfony ${{ matrix.symfony }}, MySQL ${{ matrix.mysql }})"
 
         strategy:
             fail-fast: false
@@ -21,58 +21,35 @@ jobs:
                 php: ["8.0", "8.1"]
                 symfony: ["5.4.*"]
                 sylius: ["~1.11.7"]
-                node: ["14.x"]
-                mysql: ["5.7", "8.0"]
 
         env:
             APP_ENV: test
-            DATABASE_URL: "mysql://root:root@127.0.0.1/sylius?serverVersion=${{ matrix.mysql }}"
 
         steps:
             -
                 uses: actions/checkout@v2
-
             -
                 name: Setup PHP
                 uses: shivammathur/setup-php@v2
                 with:
                     php-version: "${{ matrix.php }}"
-                    extensions: intl
+                    ini-values: date.timezone=Europe/Warsaw, opcache.enable=1, opcache.enable_cli=0, opcache.memory_consumption=256, opcache.max_accelerated_files=32531, opcache.interned_strings_buffer=8, opcache.validate_timestamps=0, opcache.save_comments=1, opcache.fast_shutdown=0
+                    extensions: intl, gd, opcache, mysql, pdo_mysql
                     tools: symfony
                     coverage: none
 
             -
-                name: Setup Node
-                uses: actions/setup-node@v1
-                with:
-                    node-version: "${{ matrix.node }}"
+                name: Restrict Symfony version
+                if: matrix.symfony != ''
+                run: |
+                    composer global config --no-plugins allow-plugins.symfony/flex true
+                    composer global require --no-progress --no-scripts --no-plugins "symfony/flex:1.18.5"
+                    composer config extra.symfony.require "${{ matrix.symfony }}"
 
             -
-                name: Shutdown default MySQL
-                run: sudo service mysql stop
-
-            -
-                name: Setup MySQL
-                uses: mirromutth/mysql-action@v1.1
-                with:
-                    mysql version: "${{ matrix.mysql }}"
-                    mysql root password: "root"
-
-            -
-                name: Output PHP version for Symfony CLI
-                run: php -v | head -n 1 | awk '{ print $2 }' > .php-version
-
-            -
-                name: Install certificates
-                run: symfony server:ca:install
-
-            -
-                name: Run Chrome Headless
-                run: google-chrome-stable --enable-automation --disable-background-networking --no-default-browser-check --no-first-run --disable-popup-blocking --disable-default-apps --allow-insecure-localhost --disable-translate --disable-extensions --no-sandbox --enable-features=Metal --headless --remote-debugging-port=9222 --window-size=2880,1800 --proxy-server='direct://' --proxy-bypass-list='*' http://127.0.0.1 > /dev/null 2>&1 &
-
-            -
-                name: Run webserver
-                run: symfony server:start --port=8080 --dir=public --daemon
+                name: Restrict Sylius version
+                if: matrix.sylius != ''
+                run: composer require "sylius/sylius:${{ matrix.sylius }}" --no-update --no-scripts --no-interaction
 
             -
                 name: Get Composer cache directory
@@ -84,71 +61,24 @@ jobs:
                 uses: actions/cache@v2
                 with:
                     path: ${{ steps.composer-cache.outputs.dir }}
-                    key: ${{ runner.os }}-php-${{ matrix.php }}-composer-${{ hashFiles('**/composer.json **/composer.lock') }}
+                    key: ${{ runner.os }}-php-${{ matrix.php }}-symfony-${{ matrix.symfony }}-composer-${{ hashFiles('**/composer.json') }}
                     restore-keys: |
-                        ${{ runner.os }}-php-${{ matrix.php }}-composer-
-            -
-                name: Restrict Symfony version
-                if: matrix.symfony != ''
-                run: |
-                    composer global config --no-plugins allow-plugins.symfony/flex true
-                    composer global require --no-progress --no-scripts --no-plugins "symfony/flex:^2.2.2"
-                    composer config extra.symfony.require "${{ matrix.symfony }}"
-            -
-                name: Restrict Sylius version
-                if: matrix.sylius != ''
-                run: composer require "sylius/sylius:${{ matrix.sylius }}" --no-update --no-scripts --no-interaction
-
+                        ${{ runner.os }}-php-${{ matrix.php }}-symfony-${{ matrix.symfony }}-composer-
             -
                 name: Install PHP dependencies
-                run: composer install --no-interaction --no-scripts
+                run: composer update --no-interaction --no-scripts
 
             -
-                name: Get Yarn cache directory
-                id: yarn-cache
-                run: echo "::set-output name=dir::$(yarn cache dir)"
-
-            -
-                name: Cache Yarn
-                uses: actions/cache@v2
-                with:
-                    path: ${{ steps.yarn-cache.outputs.dir }}
-                    key: ${{ runner.os }}-node-${{ matrix.node }}-yarn-${{ hashFiles('**/package.json **/yarn.lock') }}
-                    restore-keys: |
-                        ${{ runner.os }}-node-${{ matrix.node }}-yarn-
-            -
-                name: Install JS dependencies
-                run: yarn install
-
-            -
-                name: Prepare test application database
+                name: Dump the environment
                 run: |
-                    bin/console doctrine:database:create -vvv
-                    bin/console doctrine:schema:create -vvv
+                    composer dump-env $APP_ENV
             -
-                name: Prepare test application assets
-                run: |
-                    bin/console assets:install public -vvv
-                    yarn encore dev
-            -
-                name: Prepare test application cache
-                run: bin/console cache:warmup -vvv
-
-            -
-                name: Load fixtures in test application
-                run: bin/console sylius:fixtures:load -n
-
-            -
-                name: Validate composer.json
-                run: composer validate --ansi --strict
-
-            -
-                name: Validate database schema
-                run: bin/console doctrine:schema:validate
+                name: Warmup cache
+                run: bin/console cache:warmup
 
             -
                 name: Run PHPStan
-                run: vendor/bin/phpstan analyse -c phpstan.neon.dist -l max src/
+                run: vendor/bin/phpstan analyse -c phpstan.neon.dist
 
             -
                 name: Run Psalm
@@ -161,16 +91,3 @@ jobs:
             -
                 name: Run PHPUnit
                 run: vendor/bin/phpunit --colors=always -c phpunit.xml.dist
-
-            -
-                name: Run Behat
-                run: vendor/bin/behat --colors --strict -vvv --no-interaction -c behat.yml.dist
-
-            -
-                name: Upload Behat logs
-                uses: actions/upload-artifact@v2
-                if: failure()
-                with:
-                    name: Behat logs
-                    path: etc/build/
-                    if-no-files-found: ignore
