--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -8,6 +8,7 @@
     <projectFiles>
         <directory name="src/SyliusSkeletonPlugin/src"/>
         <ignoreFiles>
+            <directory name="src/SyliusSkeletonPlugin/src/DependencyInjection"/>
             <directory name="vendor"/>
         </ignoreFiles>
     </projectFiles>
@@ -18,6 +19,7 @@
     <plugins>
         <pluginClass class="Psalm\SymfonyPsalmPlugin\Plugin">
             <containerXml>var/cache/dev/App_KernelDevDebugContainer.xml</containerXml>
+            <containerXml>var/cache/test/App_KernelTestDebugContainer.xml</containerXml>
         </pluginClass>
         <pluginClass class="Weirdan\DoctrinePsalmPlugin\Plugin"/>
         <pluginClass class="Psalm\PhpUnitPlugin\Plugin"/>
