--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,13 +11,13 @@ jobs:
     Build:
         runs-on: ubuntu-20.04
 
-        name: "Build (${{ matrix.sylius }}, PHP ${{ matrix.php }}, Symfony ${{ matrix.symfony }}, MySQL ${{ matrix.mysql }})"
+        name: "Build (${{ matrix.sylius }}, PHP ${{ matrix.php }}, Symfony ${{ matrix.symfony }}, MariaDB ${{ matrix.mariadb }}, Node ${{ matrix.node }})"
 
         strategy:
             fail-fast: false
             matrix:
                 php: ["8.0", "8.1"]
-                symfony: ["5.4.*"]
+                symfony: ["^5.4"]
                 sylius: ["~1.11.7"]
                 node: ["14.x", "16.x"]
                 mariadb: ["10.4.10"]
