--- a/.github/workflows/static-checks.yaml
+++ b/.github/workflows/static-checks.yaml
@@ -13,13 +13,13 @@ jobs:
     static-checks:
         runs-on: ubuntu-20.04
 
-        name: "Static checks (${{ matrix.sylius }}, PHP ${{ matrix.php }}, Symfony ${{ matrix.symfony }}, MySQL ${{ matrix.mysql }})"
+        name: "Static checks (${{ matrix.sylius }}, PHP ${{ matrix.php }}, Symfony ${{ matrix.symfony }})"
 
         strategy:
             fail-fast: false
             matrix:
                 php: ["8.0", "8.1"]
-                symfony: ["5.4.*"]
+                symfony: ["^5.4"]
                 sylius: ["~1.11.7"]
 
         env:
